# plagiarism-detector

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.en.md  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  readme-tree.yml  report.yml
data/sample/: README.md  essay_01.txt  essay_02_similar.txt  essay_03_unrelated.txt
docs/: ci-cd.en.md  ci-cd.md  methods.en.md  methods.md  usage.en.md  usage.md
scripts/: copy_sample_to_uploads.py  generate_site.py
src/plagiarism_detector/: __main__.py  analyzer.py  preprocess.py  readers.py  reporting.py  similarity.py
tests/: test_analyzer.py  test_preprocess.py  test_readers_formats.py  test_reporting.py  test_sample_dataset.py  test_similarity.py  test_similarity_lcs.py  test_similarity_tfidf.py  test_site_generation.py  test_smoke.py
